tests/NormalTests/paczka1/fuzzy1/27862743.err
Error in line 6: 9cE7zy S912 75,9
Error in line 8: Osq5 S92 50,9
Error in line 12: Osq5 S27 86,2
Error in line 25: 4TMKUcj3gY S27 81,5
Error in line 15: 9cE7zy S912 58,7
Error in line 28: Osq5 A129 91,5
Error in line 22: mlK5NZokY S27 219,5
